@@ -1,3 +1,7 @@
+2016 summer
++ basic Markdown support
++ file path elements in command line to call external program
+
 2016
 + Functions - math - Sum by last column
 
